add swagger register
