# app/Http/Controllers/Swagger/UserController.php
@@ -93,6 +93,7 @@ use App\Http\Controllers\Controller;
  *             ),
  *         ),
  *     ),
+ *     security={{"bearer": {}}}
  * ),
  *
  * @OA\Put(
@@ -133,6 +134,7 @@ use App\Http\Controllers\Controller;
  *         response=404,
  *         description="not found"
  *     ),
+ *     security={{"bearer": {}}}
  * ),
  *
  * @OA\Delete(
@@ -157,6 +159,7 @@ use App\Http\Controllers\Controller;
  *         response=404,
  *         description="not found"
  *     ),
+ *     security={{"bearer": {}}}
  * ),
  * @OA\Post(
  *      path="/api/login",
@@ -166,7 +169,7 @@ use App\Http\Controllers\Controller;
  *          @OA\MediaType(
  *              mediaType="application/x-www-form-urlencoded",
  *                   @OA\Schema (
- *     type="object",
+ *                       type="object",
  *                       @OA\Property(property="email", type="string", example="yarik@yarik"),
  *                       @OA\Property(property="password", type="string", example="qwerty123"),
  *                   )
@@ -176,15 +179,55 @@ use App\Http\Controllers\Controller;
  *          response=200,
  *          description="Successful operation",
  *          @OA\JsonContent(
- *              @OA\Property(property="user", type="string", example="News deleted successfully"),
- *              @OA\Property(property="message", type="string", example="News deleted successfully"),
+ *              @OA\Property(property="user", type="object",
+ *                   @OA\Property(property="id", type="integer", example=1),
+ *                   @OA\Property(property="name", type="string", example="Yarik"),
+ *                   @OA\Property(property="email", type="string", example="yarik@yarik"),
+ *                   @OA\Property(property="role", type="integer", example=1),
+ *                   @OA\Property(property="created_at", type="datetime", example="2024-01-21T12:58:45.000000Z"),
+ *                   @OA\Property(property="updated_at", type="datetime", example="2024-01-21T12:58:45.000000Z"),
+ *              ),
+ *              @OA\Property(property="token", type="string", example="News deleted successfully"),
  *          ),
  *      ),
  *      @OA\Response(
- *          response=400,
- *          description="Invalid username/password supplied"
- *      )
+ *          response=401,
+ *          description="incorrect login details"
+ *      ),
  *  )
+ *
+ * @OA\Post(
+ *       path="/api/register",
+ *       tags={"Register"},
+ *       summary="Register user in system",
+ *       @OA\RequestBody(
+ *       description="inputs for regisrer",
+ *           @OA\MediaType(
+ *               mediaType="application/x-www-form-urlencoded",
+ *                    @OA\Schema (
+ *                        type="object",
+ *                        @OA\Property(property="name", type="string", example="Yaroslav"),
+ *                        @OA\Property(property="email", type="string", example="yarik@yarik"),
+ *                        @OA\Property(property="password", type="string", example="qwerty123"),
+ *                        @OA\Property(property="password_confirmation", type="string", example="qwerty123"),
+ *                        @OA\Property(property="role", type="integer", example=0)
+ *
+ *                    )
+ *           )
+ *       ),
+ *      @OA\Response(
+ *           response=200,
+ *           description="Successful operation",
+ *           @OA\JsonContent(
+ *               @OA\Property(property="user", type="object", example={"name": "Yaroslav", "email": "yarik@yarik", "role": 0}),
+ *               @OA\Property(property="message", type="string", example="User created successfully")
+ *           )
+ *       ),
+ *       @OA\Response(
+ *           response=400,
+ *           description="Invalid username/password supplied"
+ *       )
+ *   )
  */
 
 class UserController extends Controller
